# py-netplan-editor

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: requirements.txt
netplan_editor.egg-info/: PKG-INFO  SOURCES.txt
src/NetplanEditor/: NetplanEditor.py
src/netplan_editor/: __init__.py  netplan_editor.py  update_netplan_cmd.py
