[metadata]
name = netplan_editor
version = 0.0.1
author = YanChii
author_email = janci@binaryparadise.com
description = Library for searching and editing netplan yaml config files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yanchii/netplan-editor
project_urls =
    Bug Tracker = https://github.com/yanchii/netplan-editor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
